--- a/youtubeclone/youtube.html
+++ b/youtubeclone/youtube.html
@@ -50,6 +50,9 @@
     <div class="video-preview">
         <div class = "thumbnail-row">
             <img class="thumbnail" src="youtube-picture/thumbnail-1.webp">
+            <div>
+                
+            </div>
         </div>
         <div class="video-info-grid">
             <div class = "channel-picture">
