--- a/youtubeclone/youtube.html
+++ b/youtubeclone/youtube.html
@@ -34,6 +34,7 @@
         <div class = "right-section">
             <img class = "upload-icon" src="/HTML/icon/upload.svg">
             <img class = "youtube-apps-icon" src="/HTML/icon/youtube-apps.svg">
+            <
             <img class = "notification-icon" src="/HTML/icon/notifications.svg">
             <img class = "current-user-picture" src="/HTML/exercise/lesson7/cat.jpg">
             
@@ -50,8 +51,8 @@
     <div class="video-preview">
         <div class = "thumbnail-row">
             <img class="thumbnail" src="youtube-picture/thumbnail-1.webp">
-            <div>
-                
+            <div class = "video-time">
+                14:20
             </div>
         </div>
         <div class="video-info-grid">
