--- a/youtubeclone/youtube.html
+++ b/youtubeclone/youtube.html
@@ -34,8 +34,11 @@
         <div class = "right-section">
             <img class = "upload-icon" src="/HTML/icon/upload.svg">
             <img class = "youtube-apps-icon" src="/HTML/icon/youtube-apps.svg">
-            <
-            <img class = "notification-icon" src="/HTML/icon/notifications.svg">
+            <div class = "notifications-icon-container">
+                <img class = "notification-icon" src="/HTML/icon/notifications.svg">
+                <div class = "notifications-count">3</div>
+            </div>
+            
             <img class = "current-user-picture" src="/HTML/exercise/lesson7/cat.jpg">
             
         </div>
@@ -75,6 +78,9 @@
       <div class="video-preview">
         <div class = "thumbnail-row">
             <img class="thumbnail" src="youtube-picture/thumbnail-2.webp">
+            <div class = "video-time">
+                8:22
+            </div>
         </div>
         <div class="video-info-grid">
             <div class = "channel-picture">
@@ -94,6 +100,9 @@
     <div class="video-preview">
         <div class = "thumbnail-row">
             <img class="thumbnail" src="youtube-picture/thumbnail-3.webp">
+             <div class = "video-time">
+                9:13
+            </div>
         </div>
         <div class="video-info-grid">
             <div class = "channel-picture">
@@ -115,6 +124,9 @@
       <div class="video-preview">
         <div class = "thumbnail-row">
             <img class="thumbnail" src="youtube-picture/thumbnail-4.webp">
+             <div class = "video-time">
+                22:09
+            </div>
         </div>
         <div class="video-info-grid">
             <div class = "channel-picture">
@@ -134,6 +146,9 @@
     <div class="video-preview">
         <div class = "thumbnail-row">
             <img class="thumbnail" src="youtube-picture/thumbnail-5.webp">
+             <div class = "video-time">
+                11:17
+            </div>
         </div>
         <div class="video-info-grid">
             <div class = "channel-picture">
@@ -155,6 +170,9 @@
       <div class="video-preview">
         <div class = "thumbnail-row">
             <img class="thumbnail" src="youtube-picture/thumbnail-6.webp">
+             <div class = "video-time">
+                19:59
+            </div>
         </div>
         <div class="video-info-grid">
             <div class = "channel-picture">
